# larwirecell

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Modules/: FindWireCell.cmake  Findgojsonnet.cmake  Findjsoncpp.cmake  Findjsonnet.cmake
larwirecell/: CMakeLists.txt
larwirecell/Components/: CMakeLists.txt  ChannelNoiseDB.cxx  ChannelNoiseDB.h  ChannelSelectorDB.cxx  ChannelSelectorDB.h  CookedFrameSink.cxx  CookedFrameSink.h  CookedFrameSource.cxx  CookedFrameSource.h  DebugDumper.h  DepoFluxWriter.cxx  DepoFluxWriter.h  DepoSetSimChannelSink.cxx  DepoSetSimChannelSink.h  FrameSaver.cxx  FrameSaver.h  LazyFrameSource.cxx  LazyFrameSource.h  MultiChannelNoiseDB.cxx  MultiChannelNoiseDB.h  RawFrameSource.cxx  RawFrameSource.h  SedDumper.h  SimChannelSink.cxx  SimChannelSink.h  SimDepoSetSource.cxx  SimDepoSetSource.h  SimDepoSource.cxx  SimDepoSource.h
larwirecell/Interfaces/: CMakeLists.txt  IArtEventVisitor.h  MainTool.h
larwirecell/LArInterface/: AdcTypes.h  CMakeLists.txt  WireCellNoiseFilter_module.cc
larwirecell/Modules/: BlipMaker_module.cc  CMakeLists.txt  EventButcher_module.cc  WireCellToolkit_module.cc
larwirecell/Modules/Geometry/: CMakeLists.txt  CTreeGeometry_module.cc
larwirecell/Tools/: CMakeLists.txt  WCLS_tool.cc
larwirecell/docs/: depofluxwriter.org
larwirecell/tests/: test_depofluxwriter.bats  test_depofluxwriter_jsonnet.bats
larwirecell/tests/depofluxwriter/cfg/: test_depofluxwriter.jsonnet
larwirecell/tests/depofluxwriter/cfg/pgrapher/experiment/dune10kt-1x2x6/: wcls-sim-drift-depowriter.jsonnet  wcls-sim-drift-simchannel-deposet-nf-sp.jsonnet  wcls-sim-drift-simchannel-deposet.jsonnet
larwirecell/tests/depofluxwriter/fcl/: prodsingle_sim_dunefd.fcl  prodsingle_sim_dunefd_depoflux.fcl  prodsingle_sim_nf_sp_dunefd.fcl  prodsingle_sim_nf_sp_dunefd_depoflux.fcl  test_depofluxwriter.fcl
larwirecell/tests/depofluxwriter/root/: collect.C  plot.C
ups/: product_deps
